/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package Model.oConstantes;

/**
 *
 * @author Usuario
 */
public enum nivelAcceso {
    BASICO,
    INTERMEDIO,
    COMPLETO
}
